--- a/Downloader/Downloader.csproj
+++ b/Downloader/Downloader.csproj
@@ -69,30 +69,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Window\DownloadItem.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Window\DownloadItem.Designer.cs">
-      <DependentUpon>DownloadItem.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Window\DownloadList.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Window\DownloadList.Designer.cs">
-      <DependentUpon>DownloadList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Window\DownloadPopup.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Window\DownloadPopup.Designer.cs">
-      <DependentUpon>DownloadPopup.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HelperControls\HelperControls.csproj">
-      <Project>{C631016D-03B0-463F-BB6B-91D5BAE73CB9}</Project>
-      <Name>HelperControls</Name>
-    </ProjectReference>
     <ProjectReference Include="..\HelperExtensions\HelperExtensions.csproj">
       <Project>{414C69F3-57EF-42FF-91C3-088772DA4968}</Project>
       <Name>HelperExtensions</Name>
@@ -106,23 +84,11 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Window\DownloadItem.resx">
-      <DependentUpon>DownloadItem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Window\DownloadList.resx">
-      <DependentUpon>DownloadList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Window\DownloadPopup.resx">
-      <DependentUpon>DownloadPopup.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Resources\392517-16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\5402446-16.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
