--- a/HelperMethods/HelperMethods.csproj
+++ b/HelperMethods/HelperMethods.csproj
@@ -52,12 +52,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayMethods.cs" />
     <Compile Include="BytesMethods.cs" />
     <Compile Include="Classes\CommemorativeDay.cs" />
-    <Compile Include="Classes\Enums.cs" />
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="ColorMethods.cs" />
     <Compile Include="DateTimeMethods.cs" />
     <Compile Include="GenericMethods.cs" />
@@ -65,22 +66,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringMethods.cs" />
     <Compile Include="SystemMethods.cs" />
-    <Compile Include="WinFormsMethods.cs" />
+    <Compile Include="Helpers\WindowsHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HelperExtensions\HelperExtensions.csproj">
       <Project>{414c69f3-57ef-42ff-91c3-088772da4968}</Project>
       <Name>HelperExtensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Helpers\HelperClasses.csproj">
-      <Project>{6dad93bb-045f-41ef-b513-a39197336eac}</Project>
-      <Name>HelperClasses</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetPath) $(ProjectDir)..\..\DLL</PostBuildEvent>
