--- a/HelperExtensions/HelperExtensions.csproj
+++ b/HelperExtensions/HelperExtensions.csproj
@@ -34,6 +34,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HelperMethods">
+      <HintPath>..\..\DLL\HelperMethods.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
