--- a/HelperExtensions/HelperExtensions.csproj
+++ b/HelperExtensions/HelperExtensions.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BooleanExtensions.cs" />
     <Compile Include="ColorExtensions.cs" />
     <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="GenericExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
