Assembly name changed to fix import errors

--- a/WPF Helper/WPF Helper.csproj
+++ b/WPF Helper/WPF Helper.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyName>WPFHelper</AssemblyName>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
