--- a/HelperMethods/HelperMethods.csproj
+++ b/HelperMethods/HelperMethods.csproj
@@ -55,6 +55,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryMethods.cs" />
+    <Compile Include="FileMethods.cs" />
     <Compile Include="FunctionMethods.cs" />
     <Compile Include="ListMethods.cs" />
     <Compile Include="BytesMethods.cs" />
@@ -64,6 +66,7 @@
     <Compile Include="DateTimeMethods.cs" />
     <Compile Include="GenericMethods.cs" />
     <Compile Include="NumberMethods.cs" />
+    <Compile Include="PathMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringMethods.cs" />
     <Compile Include="SystemMethods.cs" />
