--- a/HelperExtensions/HelperExtensions.csproj
+++ b/HelperExtensions/HelperExtensions.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ColorExtensions.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
+    <Compile Include="NumberExtensions.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeExtensions.cs" />
