Build Events added for HelperClasses

--- a/HelperClasses/HelperClasses.csproj
+++ b/HelperClasses/HelperClasses.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy $(TargetPath) $(ProjectDir)..\..\DLL" />
+  </Target>
+
 </Project>
