--- a/HelperExtensions/HelperExtensions.csproj
+++ b/HelperExtensions/HelperExtensions.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\..\DLL\HelperMethods.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,10 +47,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BooleanExtensions.cs" />
     <Compile Include="ColorExtensions.cs" />
+    <Compile Include="ControlExtensions.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="NumberExtensions.cs" />
