Project settings updated for the new system (Windows 11)

--- a/HelperClasses/HelperClasses.csproj
+++ b/HelperClasses/HelperClasses.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy $(TargetPath) $(ProjectDir)..\..\DLL" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)..\..\_dll&quot;" />
   </Target>
 
 </Project>
