--- a/WpfHelpers/WpfHelpers.csproj
+++ b/WpfHelpers/WpfHelpers.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy $(TargetPath) $(ProjectDir)..\..\DLL" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)..\..\_dll&quot;" />
   </Target>
 
   <ItemGroup>
