Credential Manager methods added to the SystemMethods class

--- a/HelperMethods/HelperMethods.csproj
+++ b/HelperMethods/HelperMethods.csproj
@@ -37,6 +37,9 @@
     <Reference Include="ColorUtils">
       <HintPath>..\..\DLL\ColorUtils.dll</HintPath>
     </Reference>
+    <Reference Include="CredentialManagement, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CredentialManagement.1.0.2\lib\net35\CredentialManagement.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
