Packages versions updated

--- a/HelperExtensions/HelperExtensions.csproj
+++ b/HelperExtensions/HelperExtensions.csproj
@@ -34,9 +34,6 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HelperMethods">
-      <HintPath>..\..\DLL\HelperMethods.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -60,7 +57,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\HelperMethods\HelperMethods.csproj">
+      <Project>{2022d0ff-fc66-45b5-be74-a3813c3ea6b6}</Project>
+      <Name>HelperMethods</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(ProjectDir)..\..\_dll"</PostBuildEvent>
