--- a/HelperMethods/HelperMethods.csproj
+++ b/HelperMethods/HelperMethods.csproj
@@ -86,13 +86,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BytesMethods.cs" />
     <Compile Include="Classes\FileMode.cs" />
     <Compile Include="DirectoryMethods.cs" />
     <Compile Include="EnumMethods.cs" />
     <Compile Include="FileMethods.cs" />
     <Compile Include="FunctionMethods.cs" />
     <Compile Include="ListMethods.cs" />
-    <Compile Include="Classes\CommemorativeDay.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="ColorMethods.cs" />
     <Compile Include="DateTimeMethods.cs" />
