--- a/.editorconfig
+++ b/.editorconfig
@@ -26,6 +26,33 @@ csharp_prefer_system_threading_lock = true:suggestion
 # CS8619: Nullability of reference types in value doesn't match target type.
 dotnet_diagnostic.CS8619.severity = none
 
+# IDE0007: Use implicit type
+csharp_style_var_for_built_in_types = false
+
+# IDE0007: Use implicit type
+csharp_style_var_when_type_is_apparent = false
+
+# IDE0007: Use implicit type
+csharp_style_var_elsewhere = false
+
+# CS8600: Converting null literal or possible null value to non-nullable type.
+dotnet_diagnostic.CS8600.severity = none
+
+# CS8601: Possible null reference assignment.
+dotnet_diagnostic.CS8601.severity = none
+
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = none
+
+# CS8625: Cannot convert null literal to non-nullable reference type.
+dotnet_diagnostic.CS8625.severity = silent
+
+# CS8604: Possible null reference argument.
+dotnet_diagnostic.CS8604.severity = none
+
+# CS8602: Dereference of a possibly null reference.
+dotnet_diagnostic.CS8602.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
